# aside

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  security_hardening.yml  self_hosting.yml
docker-entrypoint-initdb.d/: create-test-db.sql
docs/: hosted-build-overlay.md
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/: .gitignore
mobile/android/app/: .gitignore  build.gradle.kts
mobile/integration_test/: e2ee_spike_test.dart  session_1to1_test.dart  signal_client_test.dart
mobile/ios/: InstadamnWidgetExtension.entitlements  Podfile
mobile/ios/InstadamnWidget/: KinWidget.swift
mobile/ios/Runner/: AppDelegate.swift  Info.plist  (+6 more)
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/rust/: Cargo.toml
mobile/rust/src/: frb_generated.rs
mobile/rust/src/api/: attachments.rs  identity.rs  init.rs  mod.rs  prekeys.rs  session_1to1.rs  session_group.rs
mobile/rust_builder/: pubspec.yaml
src/: app.ts  config.ts  constants.ts  email.ts  firebase.ts  helpers.ts  index.ts  openapi.ts  socket.ts  storage.ts
src/db/: migrate.ts  pool.ts
src/lib/: cors.ts  postAccess.ts  slugs.ts
src/marketing/: README.md  audience.ts  index.ts  send.ts  unsubscribe-token.ts
src/middleware/: adminOnly.ts  auth.ts  rateLimit.ts
src/notifications/: discord.ts
src/routes/: admin.ts  auth.ts  comments.ts  contacts.ts  conversations.ts  devices.ts  dm_attachments.ts  feed.ts  follows.ts  groups.ts  index.ts  invite-link.ts  invites.ts  posts.ts  reactions.ts  stories.ts  subscriptions.ts  unsubscribe.ts  uploads.ts  users.ts  webhooks.ts
tests/: admin.test.ts  api.test.ts  build25_units.test.ts  config.test.ts  discord.test.ts  helpers.ts  marketing.test.ts  pushThrottle.test.ts  setup-env.js  slugs.test.ts  textPostNotification.test.ts
(+203 files in other folders)
